--- a/todolist/src/main/resources/templates/tasks.html
+++ b/todolist/src/main/resources/templates/tasks.html
@@ -2,73 +2,47 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <style>
-        html, body {
-        height: 100%;
-        }
-
-        body {
-          background: linear-gradient(135deg, #2f4b8a, #3e65a5);
-          color: #eef2f6;
-          font-family: 'Poppins', 'Segoe UI', sans-serif;
-        }
-
-        .card {
-          background: rgba(255, 255, 255, 0.7);
-          border-radius: 10px;
-          border: 1px solid rgba(0,0,0,0.1);
-          box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
-        }
-
-        .btn-primary {
-          background-color: #4263eb;
-          border: none;
-        }
-        .btn-primary:hover {
-          background-color: #3652d9;
-        }
-
-        .text-strikethrough {
-          text-decoration: line-through;
-          color: grey;
-        }
-
-        .text-shadow {
-          text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        }
-    </style>
+    <link rel="icon" th:href="@{favicon.ico}" type="image/x-icon">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-    <div class="container">
-        <h1 class="mt-5 text-center text-shadow">To Do List</h1>
-        <form action="/" method="post" class="row mt-3">
-            <div class="col-md-10">
-                <label for="taskTitle" class="visually-hidden">New task</label>
-                <input id="taskTitle"
-                       class="form-control py-3 fs-5"
-                       type="text"
-                       name="title"
-                       placeholder="Add a new task..."
-                       required>
-            </div>
-            <div class="col-md-2">
-                <button class="btn btn-primary w-100 py-3 fs-5" type="submit">Add</button>
+    <div class="tasks-container">
+        <h1>To Do List</h1>
+        <h2 class="welcome-message">Welcome, <span th:text="${userLogin}"></span>!</h2>
+        <form th:action="@{/tasks}" method="post">
+            <div class="input-container">
+                <div class="input">
+                    <label for="taskTitle" class="visually-hidden">New task</label>
+                    <input id="taskTitle"
+                           type="text"
+                           name="title"
+                           placeholder="Add a new task..."
+                           maxlength="80"
+                           required>
+                </div>
+                <div>
+                    <button type="submit">Add</button>
+                </div>
             </div>
         </form>
-        <div class="mt-4">
+        <div>
             <th:block th:each="task : ${tasks}">
-                <div class="card mb-2">
-                    <div class="card-body d-flex justify-content-between align-items-center">
-                        <span class="fs-5 fw-semibold" th:classappend="${task.completed} ? 'text-strikethrough' : ''" th:text="${task.title}">Task </span>
-                        <div>
-                            <form th:action="@{/{id}/toggle(id=${task.id})}" method="post" class="d-inline">
+                <div>
+                    <div class="task-container">
+                            <span th:classappend="${task.completed} ? 'completed-task' : ''"
+                                  th:text="${task.title}"
+                                  class="task">
+                                Task
+                            </span>
+                        <div class="button-container">
+                            <form th:action="@{/tasks/{id}/toggle(id=${task.id})}" method="post">
                                 <button class="btn btn-outline-secondary btn-sm" type="submit">Toggle</button>
                             </form>
 
-                            <form th:action="@{/{id}/delete(id=${task.id})}" method="post" class="d-inline">
-                                <button class="btn btn-outline-danger btn-sm" type="submit">Delete</button>
+                            <form th:action="@{/tasks/{id}/delete(id=${task.id})}" method="post">
+                                <button type="submit">Delete</button>
                             </form>
                         </div>
                     </div>
